<resources>
    <string name="app_name">HelpOut</string>
    <string name="welcomeText">Ready to \nHelp Out?</string>
    <string name="startButton">Click here to get started</string>
    <string name="DownloadText">Download</string>
    <string name="ViewerString">Viewer</string>
    <string name="sortByLocationStr">Sort By Location</string>
    <string name="AlphabetizeStr">Alphabetize</string>
    <string name="searchHint">Find your opportunity</string>
    <string name="Home">Home</string>
    <string name="Search">Search</string>
    <string name="Profile">Profile</string>
    <string name="Opportunities">Opportunities</string>
    <string name="signUpTitle">Sign Up</string>
    <string name="signInTitle">Sign In</string>
    <string name="emailText">Email</string>
    <string name="passwordText">Password</string>
    <string name="signInText">Already have an account?</string>
    <string name="signUpText">Not registered?</string>
    <string name="signOutTitle">Sign Out</string>
    <string name="RegisterText">Let\'s Register Your Account</string>
    <string name="successfulLoginText">You have successfully signed in!</string>
    <string name="welcomeBackText">Welcome Back to Help Out!</string>
    <string name="backText">Back</string>
    <string name="nextText">Next</string>
    <string name="finishText">Finish</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Opportunity">Opportunity</string>
    <string name="quoteOfDayStr">“Life\'s most persistent and urgent question is: \'What are you doing for others?\'"</string>
    <string name="titleTextStr">Title</string>
    <string name="descriptionLabelStr">Description:</string>
    <string name="organizerLabelStr">Organizer:</string>
    <string name="locationLabelStr">Location:</string>
    <string name="contactLabelStr">Contact:</string>
    <string name="addressLabelStr">Address:</string>

</resources>