<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_gradient"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:paddingTop="230dp"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amiko"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="40sp"
            android:textStyle="bold"
            android:text="@string/RegisterText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="70sp">

            <!--    ENTER EMAIL    -->
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:fontFamily="@font/amiko"
                android:textColor="@color/colorGray"
                android:textSize="20sp"
                android:background="@drawable/custom_button"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:ems="10"
                android:hint="@string/emailText"
                android:inputType="textEmailAddress" />

            <!--    ENTER PASSWORD    -->
            <EditText
                android:id="@+id/password"
                android:layout_below="@id/email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:fontFamily="@font/amiko"
                android:textColor="@color/colorGray"
                android:textSize="20sp"
                android:background="@drawable/custom_button"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:ems="10"
                android:layout_marginTop="20dp"
                android:hint="@string/passwordText"
                android:inputType="textPassword" />

            <!--    SIGN UP BUTTON    -->
            <Button
                android:id="@+id/btnSignup"
                android:layout_gravity="center"
                android:background="@drawable/custom_button"
                android:layout_marginTop="100dp"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:fontFamily="sans-serif"
                android:text="@string/signUpTitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25sp"
                android:shadowColor="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:textAlignment="center"
                    android:layout_marginTop="20sp"
                    android:fontFamily="@font/amiko"
                    android:textSize="15sp"
                    android:textColor="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signInText" />

                <!--    SIGN IN LINK TO OTHER ACTIVITY    -->
                <TextView
                    android:id="@+id/signInLink"
                    android:layout_marginLeft="5dp"
                    android:textAlignment="center"
                    android:layout_marginTop="20sp"
                    android:fontFamily="@font/amiko"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signInTitle" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>