<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:layout_marginTop="50sp"
    android:paddingTop="15dp"
    android:paddingRight="15dp"
    android:paddingLeft="15dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20sp"
        android:layout_centerHorizontal="true">

        <!--    SIGN IN    -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/signInTitle"
            android:textSize="25sp"
            android:textColor="@color/colorGray"
            android:textAlignment="center"
            android:fontFamily="@font/amiko"/>

        <!--    ENTER EMAIL    -->
        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amiko"
            android:layout_marginTop="10sp"
            android:textSize="20sp"
            android:ems="10"
            android:hint="@string/emailText"
            android:inputType="textEmailAddress" />

        <!--    ENTER PASSWORD    -->
        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amiko"
            android:layout_marginTop="10sp"
            android:textSize="20sp"
            android:ems="10"
            android:hint="@string/passwordText"
            android:inputType="textPassword" />

        <!--    ENTER BUTTON    -->
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20sp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signIn"
                android:textSize="20sp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:background="@drawable/outlined_button"
                android:text="@string/signInTitle"
                android:fontFamily="@font/amiko"
                android:textColor="@color/colorGray"
                android:textAllCaps="false"
                android:textAlignment="center"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

        <!--    SIGN UP    -->
        <TextView
            android:id="@+id/signUpText"
            android:textAlignment="center"
            android:layout_marginTop="20sp"
            android:fontFamily="@font/amiko"
            android:textSize="14sp"
            android:textColor="@color/colorGray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUpText" />

    </LinearLayout>

</RelativeLayout>