<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_gradient"
    tools:context=".WalkthroughActivity">

    <!--  Slides Container  -->
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/slideViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/dotsLayout"/>

    <!--  Dots  -->
    <LinearLayout
        android:id="@+id/dotsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="20dp">

    </LinearLayout>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backText"
        android:textSize="20sp"
        android:paddingBottom="20dp"
        android:textAllCaps="false"
        android:background="?android:attr/selectableItemBackground"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextText"
        android:textSize="20sp"
        android:paddingBottom="20dp"
        android:textAllCaps="false"
        android:background="?android:attr/selectableItemBackground"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:id="@+id/startButton"
        android:background="@drawable/custom_button"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_marginBottom="200dp"
        android:layout_alignParentBottom="true"
        android:fontFamily="sans-serif"
        android:text="@string/startButton"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:shadowColor="@color/colorPrimaryDark"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

</RelativeLayout>