<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DisplayOpportunityActivity"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar_layout"
        android:id="@+id/toolbar">
    </include>

    <!--  SCROLL VIEW  -->
    <ScrollView
        android:layout_below="@id/toolbar"
        android:paddingTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp">

        <!--    START PARENT LINEAR LAYOUT    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:fontFamily="sans-serif"
            android:orientation="vertical">

            <!-- Title Text of the Opportunity -->
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/titleTextStr"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25sp"
                android:textStyle="bold" />

            <!--    DESCRIPTION LAYOUT    -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <!-- Description Label of the Opportunity -->
                <TextView
                    android:id="@+id/descLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descriptionLabelStr"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <!-- Description Text of the Opportunity -->
                <TextView
                    android:id="@+id/descText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/colorText"
                    android:textSize="20sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <!--    ORGANIZER LAYOUT    -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:layout_marginEnd="10dp">

                <!-- Organizer Label of the Opportunity -->
                <TextView
                    android:id="@+id/organizerLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/organizerLabelStr"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="10dp"/>

                <!-- Organizer Text of the Opportunity -->
                <TextView
                    android:id="@+id/organizerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/colorText"
                    android:textSize="20sp"
                    android:textStyle="normal" />
            </LinearLayout>


            <!--    LOCATION LAYOUT    -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:layout_marginEnd="10dp">

                <!-- Location Label of the Opportunity -->
                <TextView
                    android:id="@+id/locationLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/locationLabelStr"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="10dp"/>

                <!-- Location Text of the Opportunity -->
                <TextView
                    android:id="@+id/locationText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/colorText"
                    android:textSize="20sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <!--    ADDRESS LAYOUT    -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <!-- Address Label of the Opportunity -->
                <TextView
                    android:id="@+id/addressLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addressLabelStr"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="10dp"/>

                <!-- Address Text of the Opportunity -->
                <TextView
                    android:id="@+id/addressText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/colorText"
                    android:textSize="20sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <!--    CONTACT LAYOUT    -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <!-- Address Label of the Opportunity -->
                <TextView
                    android:id="@+id/contactLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contactLabelStr"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="10dp"/>

                <!-- Address Text of the Opportunity -->
                <TextView
                    android:id="@+id/contactText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/colorText"
                    android:textSize="20sp"
                    android:textStyle="normal" />
            </LinearLayout>

        </LinearLayout>
        <!--    END PARENT LINEAR LAYOUT    -->

    </ScrollView>

    <!--    BOTTOM NAV MENU    -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:itemIconTint="@color/color_selector"
        app:itemTextColor="@color/color_selector"
        app:menu="@menu/bottom_navigation_menu"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rounded_nav"
        app:labelVisibilityMode="labeled" />

</RelativeLayout>